force-app/main/default/objects/coverage_details__dll/coverage_details__dll.object-meta.xml
<CustomObject>
    <label>coverage_details</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>