force-app/main/default/objects/coverage_details__dll/fields/coverage_amount__c.field-meta.xml
<CustomField>
    <fullName>coverage_amount__c</fullName>
    <label>coverage_amount</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>coverage_amount</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>