force-app/main/default/objects/coverage_details__dll/fields/coverage_type__c.field-meta.xml
<CustomField>
    <fullName>coverage_type__c</fullName>
    <label>coverage_type</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>coverage_type</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>